--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,24 @@
-python 3.6.8
+autopep8==1.6.0
+certifi==2022.12.7
+charset-normalizer==2.0.12
+click==8.0.4
+colorama==0.4.5
+dataclasses==0.8
+Flask==2.0.3
+idna==3.4
+importlib-metadata==4.8.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+numpy==1.19.5
+opencv-python==4.5.5.62
+pycodestyle==2.8.0
+requests==2.27.1
+selenium==3.141.0
+sklearn==0.0.post1
+toml==0.10.2
+typing_extensions==4.1.1
+urllib3==1.26.13
+Werkzeug==2.0.3
+zipp==3.6.0
+gunicorn
